wip: maybe? fix for eclipse workspaces
Signed-off-by: AterAnimAvis <AterAnimAvis@gmail.com>